# SMITER

./: pyproject.toml  requirements.txt  requirements_dev.txt
smiter/: noise_functions.py  synthetic_mzml.py
tests/: test_synthetic_mzml.py
