[build-system]
#requires = [
#    "setuptools >= 35.0.2",
#    "setuptools_scm >= 2.0.0, <3"
#]
requires = ["poetry>=0.12"]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "SMITER"
version = "0.1.0"
description = ""
authors = ["Manuel Koesters <manuel.koesters@dcb.unibe.ch>"]
license= "MIT License"
packages = [
    { include = "smiter"}, 
    { include = "tests", format = "sdist"}
]

[tool.poetry.scripts]
smiter = "smiter.cli:main"


[tool.poetry.dependencies]
python = ">3.6"
psims = "0.1.30"
pyqms = "0.6.2"
numpy = "1.18.1"
pymzml = {version = "2.4.6", extras = ["plot"]}
scipy = "1.4.1"
peptide-fragments = {git = "https://github.com/MKoesters/peptide_fragments.git", rev = "feature/setup_script"}
loguru = "0.4.1"

[tool.poetry.dev-dependencies]
pip = "19.2.3"
bump2version = "0.5.11"
wheel = "0.33.6"
watchdog = "0.9.0"
flake8 = "3.7.8"
tox = "3.14.0"
codecov = "^2.1.3"
Sphinx = "1.8.5"
twine = "1.14.0"
Click = "7.0"
pytest = "4.6.5"
pytest-runner = "5.1"
pydocstyle = "^5.0.2"
black = "^19.10b0"
isort = "^4.3.21"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
